[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "range-bd"
version = "0.0.1"
description = "Range tes BD"
requires-python = ">=3.11"
dependencies = [
		"send2trash",
		"selenium",
		"beautifulsoup4",
		"opencv-python",
        "numpy",
        "rotate-screen",
        "pyautogui",
]

[tool.setuptools]
packages = ["range_bd"]

[project.scripts]
pdf_to_cbz = "range_bd.pdf_to_cbz:main"
pdf_to_cbz_loop = "range_bd.pdf_to_cbz:convert_loop"

[project.optional-dependencies]
dev = [
    "pytest",
		"pdbpp",
		"black",
		"isort",
		"mypy",
]